fix global notice with layout setup and z-index css

--- a/app/assets/stylesheets/notice.css.scss
+++ b/app/assets/stylesheets/notice.css.scss
@@ -1,4 +1,5 @@
 #global_notice {
+  z-index: 99999;
   position: fixed;
   left: 50%;
   bottom: 0;
